; ModuleID = '/home/carl/AnghaBench/git/extr_pack-bitmap.c_pack_bitmap_filename.c'
source_filename = "/home/carl/AnghaBench/git/extr_pack-bitmap.c_pack_bitmap_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.packed_git = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c".pack\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"pack_name does not end in .pack\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"%.*s.bitmap\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.packed_git*)* @pack_bitmap_filename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @pack_bitmap_filename(%struct.packed_git* %0) #0 {
  %2 = alloca %struct.packed_git*, align 8
  %3 = alloca i64, align 8
  store %struct.packed_git* %0, %struct.packed_git** %2, align 8
  %4 = load %struct.packed_git*, %struct.packed_git** %2, align 8
  %5 = getelementptr inbounds %struct.packed_git, %struct.packed_git* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @strip_suffix(i32 %6, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i64* %3)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = call i32 @BUG(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i64, i64* %3, align 8
  %13 = trunc i64 %12 to i32
  %14 = load %struct.packed_git*, %struct.packed_git** %2, align 8
  %15 = getelementptr inbounds %struct.packed_git, %struct.packed_git* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i8* @xstrfmt(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 %13, i32 %16)
  ret i8* %17
}

declare dso_local i32 @strip_suffix(i32, i8*, i64*) #1

declare dso_local i32 @BUG(i8*) #1

declare dso_local i8* @xstrfmt(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
